# polymarket-engine

./: .env.example  .gitignore  METHODOLOGY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
eval/: golden_cases.jsonl  synthetic_cases.jsonl
n8n/: flow-scan-workflow.json  predict-market-risk-workflow.json
openspec/: backlog.md
openspec/changes/add-app-scheduler/: proposal.md  tasks.md
openspec/changes/add-dashboard/: proposal.md  tasks.md
openspec/changes/add-dashboard/specs/dashboard/: spec.md
openspec/changes/add-market-category-filter/: proposal.md  tasks.md
openspec/changes/add-market-signal/: design.md  proposal.md  tasks.md
openspec/changes/add-paper-trading/: proposal.md  tasks.md
openspec/changes/add-strategy-capital-tags/: proposal.md  tasks.md
openspec/changes/add-trade-ledger/: proposal.md  tasks.md
openspec/changes/add-wallet-flow-signal/: design.md  proposal.md  tasks.md
openspec/changes/enhance-signal-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/upgrade-signal-llm/: design.md  proposal.md  tasks.md
scripts/: reset_flow_data.py  run_hidden.vbs  run_server.bat  sanity_synthetic.py
src/crypto_news_parser/: dashboard.py  fetch.py  llm_adapter.py  main.py  models.py  paper.py  parser.py  risk.py  scheduler.py  storage.py  wallet_flow.py
tests/: conftest.py  test_category.py  test_dashboard.py  test_deployed_capital.py  test_llm_providers.py  test_paper.py  test_poll_resolutions.py  test_risk.py  test_scheduler.py  test_signal.py  test_signal_llm.py  test_wallet_flow.py
(+11 files in other folders)
