[project]
name = "crypto-news-parser"
version = "0.1.0"
description = "Crypto News -> Structured Signals API"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
  "httpx>=0.26",
  "ruff==0.14.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Embedded HTML/JS template — line length doesn't apply to markup.
"src/crypto_news_parser/dashboard.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["crypto_news_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
